--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,5 +1,13 @@
+@import "./Vars.scss";
+@import "./Media.scss";
 body {
   margin: 0;
-  background-color: rebeccapurple;
-  color: white;
+  font-family: $theme-font;
+  background: $main-color;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
+* {
+  box-sizing: border-box;
 }
